# firefly-workspace

./: Cargo.toml
firefly-core/: Cargo.toml
firefly-core/src/: main.rs
firefly-ipc/: Cargo.toml
firefly-ipc/src/: lib.rs
firefly-ui/: Cargo.toml
firefly-ui/src/: main.rs
