[package]
name = "firefly-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_System_Com",
    "Win32_Graphics_Direct2D_Common", # <-- 新增了这个关键 Feature！
] }
tokio = { version = "1", features = ["full"] }
shared_memory = "0.12"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
firefly-ipc = { path = "../firefly-ipc" }