[package]
name = "firefly-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62.2", features = [ # 也可以使用 0.62.0 或更高
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct3D",      # <-- 新增了这个关键 Feature！
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
tokio = { version = "1", features = ["full"] }
shared_memory = "0.12"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
firefly-ipc = { path = "../firefly-ipc" }